# Adversary-CBF

./: .gitignore  CMakeLists.txt  DI_distributed.asv  DI_distributed.m  README.md  SI_distributed.asv  SI_distributed.m  SI_distributed_2.m  SI_distributed_3.asv  SI_distributed_3.m  SI_distributed_4.asv  SI_distributed_4.m  UT_RL_2agent.py  UT_RL_2agent_jit.py  UT_RL_2agent_mvgp.py  Unicycle_distributed.m  adp1.fig  adp2.fig  always_cbf.avi  barriers.eps  cartpole.py  cartpole_UTRL.py  cartpole_states.eps  compare1.fig  comparison.fig  compute_trust.m  constant_alpha_v1.avi  control.eps  corridor.py  corridor_org.py  custom_cartpole.py  detect_filter_deterministic.asv  export_path.sh  gaussian_derived_properties.m  gaussian_properties.m  gaussian_properties_MVG.asv  gaussian_properties_MVG.m  generate_random_cov.m  gpytorch_mvgp.py  graph_utils.py  (+55 more)
Ongoing work/: A.m  Aquib_Unicycle_without_attack.m  MatrixVariateGaussianProcess.asv  Unicycle_detection_v1.m  Unicycle_without_attack.m  cvx_cbf_example.m  test.m  test.mlx  testcustomkernel.m
Untitled Folder/: Untitled.ipynb
cartpole/: cartpole_UTRL.py  cartpole_UTRL_simple.py  cartpole_UTRL_simple2.py  cartpole_UTRL_simple3_offline.py  cartpole_UTRL_simple4_offline.py  cartpole_UTRL_simple_offline_constrained.py  cartpole_evaluateGP.py  cartpole_policy.py
ctorch/: CMakeLists.txt  build_torch.sh  dcgan.cpp
ctorch/lltm-extension/: lltm.cpp
ctorch/lltm-extension/lltm_cpp.egg-info/: PKG-INFO
environments/: environment1.m  environment2.m
examples/: GPR_Example.m  MatrixVariateGaussianProcess.m  Unicycle_detect_mitigate.m  test.mlx  test_MVG.m  testcustomkernel.m
leader_follower/: UT_RL_2agent.py  UT_RL_2agent_jit.py  UT_RL_2agent_jit_simple.py  UT_RL_2agent_mvgp.py
notebooks/: Untitled.ipynb  test_constrained_update.ipynb
predefined_classes/: DoubleIntegrator2D.asv  DoubleIntegrator2D.m  EnvObject2D.m  MatrixVariateGaussianProcess.m  MatrixVariateGaussianProcessGeneralized.asv  MatrixVariateGaussianProcessGeneralized.m  SingleIntegrator2D.asv  SingleIntegrator2D.m  Unicycle2D.m  Unicycle2D.m~  Unicycle2Dnew.asv  Unicycle2Dnew.m  test_MVG_ADP.asv  test_MVG_ADP.m
predefined_functions/: circle.m  crosshatch_poly.m  wrap_pi.m  (+3 more)
(+50 files in other folders)
